Bug 104737 - Bullets and Numbering: inconsistent naming of last tab page
Summary: Bullets and Numbering: inconsistent naming of last tab page
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Tamás Zolnai
URL:
Whiteboard: target:5.4.0 target:5.3.0.1
Keywords: needsUXEval
Depends on:
Blocks:
 
Reported: 2016-12-17 17:19 UTC by Tamás Zolnai
Modified: 2016-12-22 02:25 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Zolnai 2016-12-17 17:19:56 UTC
Description:
Impress and Writer uses some shared part of the Bullets and Numbering dialog. The last tab in Impress is called 'Customize', while in Writer the last tab with the same functionality is called 'Options'. Would be good to call these tabs on the same name.
Needs UX input, which name is more preferable. 

Steps to Reproduce:
1. Open Bullets and Numbering dialog in Writer and in Impress

Actual Results:  
In the two component the same tab page has different names.

Expected Results:
The same tab should have the same name in Writer and in Impress.


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 6.3; WOW64; rv:50.0) Gecko/20100101 Firefox/50.0
Comment 1 Heiko Tietze 2016-12-18 09:03:28 UTC
Addressing the UX people needs not only the keyword but also ux-advice in CC.
Comment 2 Heiko Tietze 2016-12-18 09:14:42 UTC
There are a few more differences but a consistent naming would definitely be good. My choice is Customize rather than Options since the latter sounds like modification to what has been chosen in the other tabs. 

Ideally the workflow is clear from the UI and the customization is integrated. What I have in mind is a number of preset (bullets and numbers) where selecting one of the options shows the respective 'customization' next to it.
Comment 3 Cor Nouws 2016-12-20 08:18:03 UTC
+1 for Customize
Comment 4 Commit Notification 2016-12-21 11:41:55 UTC
Tamás Zolnai committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=584c745ea484e1f8047278fc83b41b30a90f884d

tdf#104737: Bullets and Numbering: inconsistent naming of last tab page

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2016-12-22 02:25:16 UTC
Tamás Zolnai committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=51cb1ebcc46030ed9526d18a0e2e9279a4edf438&h=libreoffice-5-3

tdf#104737: Bullets and Numbering: inconsistent naming of last tab page

It will be available in 5.3.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.