tdf#104737: Bullets and Numbering: inconsistent naming of last tab page

Change-Id: Id1d1d92933c110942fd232067620e8224686a915
Reviewed-on: https://gerrit.libreoffice.org/32256
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Maxim Monastirsky <momonasmon@gmail.com>
Reviewed-by: Tamás Zolnai <tamas.zolnai@collabora.com>
(cherry picked from commit 584c745ea484e1f8047278fc83b41b30a90f884d)
Reviewed-on: https://gerrit.libreoffice.org/32321
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
Tested-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>